<resources>
    <string name="app_name">Ghumoo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="enter_username">Enter Username</string>
    <string name="create_password">Create Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="travel_with_nus">Travel with \nUs</string>
    <string name="profile_picture_box">Profile Picture Box</string>
</resources>