<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background ="@drawable/border"
        android:paddingEnd="20dp"
        android:layout_marginBottom="15dp"
        android:paddingStart="15dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background ="@drawable/border"
        android:paddingEnd="20dp"
        android:paddingStart="15dp"
        android:ems="10"
        android:layout_marginBottom="15dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background ="@drawable/border"
        android:paddingEnd="20dp"
        android:paddingStart="15dp"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0f0"
        android:text="@string/sign_up" />
</LinearLayout>

</FrameLayout>