<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:ems="10"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:maxLines="1"
            android:background="@drawable/border"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:ems="10"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#0f0"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />


    </LinearLayout>


</FrameLayout>